# axiom-encode

./: .gitignore  26_USC_1_VALIDATION_REPORT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROGRESS.md  PR_BODY_v3.md  README.md  go.mod  pyproject.toml
.github/workflows/: bulk-encode.yml  ci.yml  dispatch-signed-snap-queue.yml  finalize-signed-snap-queue.yml  golden-regeneration.yml  merge-snap-queue-activation.yml  migrate-apply-signing-key.yml  provision-selftest.yml  signed-apply-reusable.yml  signing-supervisor.yml  targeted-signed-reencode.yml  validate-snap-queue-activation.yml
autoresearch/: program.md
benchmarks/: encodebench_uk_v1.yaml  uk_autoresearch_partner_disjunction.yaml  uk_expanded.yaml  uk_numeric_coverage_repair_derived.yaml  uk_numeric_coverage_repair_official.yaml  uk_pension_credit_wave5.yaml  uk_pension_credit_wave8.yaml  uk_readiness.yaml  uk_starter.yaml  uk_wave13_seed.yaml  uk_wave15_seed.yaml  uk_wave16_atomic_seed.yaml  uk_wave19_branch_conjunction_repair.yaml  uk_wave19_money_regression.yaml  uk_wave21_bulk_seed.yaml  uk_wave21_omission_subject_travel_repair.yaml  uk_wave21_temporal_repair.yaml  uk_wave21_travel_claimant_repair.yaml  us_co_colorado_works_leaf_closeout.yaml  us_co_colorado_works_leaf_h_repair.yaml  us_co_colorado_works_leaf_k_repair.yaml  us_co_colorado_works_leaf_repair.yaml  us_co_colorado_works_leaf_seed.yaml  us_co_colorado_works_seed.yaml  us_snap_al_child_support_deduction_option_refresh.yaml  us_snap_al_self_employment_expense_option_refresh.yaml  us_snap_al_self_employment_simplified_deduction_rate_refresh.yaml  us_snap_asset_test_current_effective_refresh.yaml  us_snap_asset_test_refresh.yaml  us_snap_co_child_support_deduction_option_refresh.yaml  us_snap_co_self_employment_expense_option_refresh.yaml  us_snap_earned_income_deduction_refresh.yaml  us_snap_eligibility_refresh.yaml  us_snap_federal_c3_repair.yaml  us_snap_federal_reconstruction_seed.yaml  us_snap_fy2026_cola_table_repair.yaml  us_snap_net_income_pre_shelter_refresh.yaml  us_snap_ny_limited_utility_allowance_refresh.yaml  us_snap_ny_standard_utility_allowance_refresh.yaml  us_snap_sc_child_support_deduction_option_refresh.yaml  (+11 more)
changelog.d/: 1032-proof-atom-anchor-consistency.fixed.md  1078-apply-manifest-checkout-root.fixed.md  1078-apply-manifest-config-c-monorepo.fixed.md  1100-unified-corpus-resolver.fixed.md  1101-waiver-fingerprint-proof-contract.added.md  1112-fixture-period-kind-engine-enum.fixed.md  1113-oracle-coverage-fail-on-empty.fixed.md  1120.added.md  1135-external-apply-signer.added.md  1147-country-signed-backfill.added.md  1147-provision-relocatable-runtime.fixed.md  1147-trusted-runtime-attestation.added.md  1189-model-capability-eval-board.added.md  1190-parallel-waiver-audit.changed.md  1191-partition-invariant-waiver-fingerprints.fixed.md  1201.fixed.md  1402-in-lieu-displacement-import.fixed.md  1402b-policyengine-coverage.changed.md  3121-wage-exclusion-coverage.fixed.md  3121-y-policyengine-coverage.fixed.md  3241b-source-table-scope.fixed.md  3402q-oracle-classification.changed.md  782-validation-gap-ratchet.fixed.md  aca-36b-c1a-oracle-mappings.fixed.md  aca-36b-policyengine-oracle-coverage.fixed.md  aca-36b-premium-assistance-compat.fixed.md  aca-component-limitation-validator.fixed.md  acp-policyengine-oracle-coverage.changed.md  act-766-word-half-percent-grounding.fixed.md  aggregate-limited-amount-validator.fixed.md  ak-atap-oracle-coverage.changed.md  ak-atap-source-oracle-mappings.changed.md  al-snap-poe-oracle-coverage.fixed.md  al-tanf-oracle-metadata.changed.md  allow-reviewed-ca-td1-head.changed.md  amendment-context-encode-harness.added.md  amount-attribution-prompt.fixed.md  apply-input-field-formula-repair.fixed.md  apply-manifest-deletions.changed.md  apply-path-hardening.changed.md  (+511 more)
cmd/axiom-encode-apply-signer/: context.go  context_test.go  harden_darwin.go  harden_linux.go  keymaterial.go  keymaterial_test.go  main.go  run.go  run_test.go  serve.go  serve_test.go  unsupported.go  wire.go  wire_test.go
cmd/axiom-encode-signing-supervisor/: execution_trust.go  execution_trust_fixture_test.go  (+8 more)
docs/: autorac-methods-log.md  axiom-encode-methods-log.md  ci-parity.md  co-snap-manual-procedural-stress-2026-06-17.md  encodebench.md  interval-table-scale-design.md  notary-acceptance.md  paper-evidence-register.md  policyengine-oracle-registry.md  prompt-versioning.md  rulespec-proof-validation.md  trusted-signing-supervisor.md  upstream-first-encoding-plan.md
migrations/: 001_create_autorac_tables.sql  001_encoding_runs.sql  002_agent_transcripts.sql  003_agent_sessions.sql  003_sdk_sessions.sql  004_lock_down_public_access.sql  005_encoding_run_outcomes.sql
scripts/: co_snap_manual_stress.py  drift_regenerate.py  extract_usc_section.py  generate_v1_rollout_inventory.py  materialize_corpus_release.py  prepare_signed_backfill.py  prepare_signed_queue.py  provision_verification_supervisor.py  run_autoagent_pilot.py  run_autoresearch_iteration.py  run_autoresearch_pilot.py  run_snap_queue_until_idle.py
tests/: __init__.py  conftest.py  eval_evidence_fixtures.py  production_signing_fixture.py  release_object_fixtures.py  signing_broker_fixtures.py  test_autoagent_pilot.py  test_ci_parity.py  test_cli.py  test_compilation.py  test_concepts_auto_repair.py  test_concepts_cli.py  test_concepts_registry.py  test_corpus_release.py  test_corpus_release_command_plane.py  test_corpus_resolver.py  test_dependency_stubs.py  test_encoder_backend.py  test_encoder_harness.py  test_encoder_path_collisions.py  test_encoding_db.py  test_eval_board.py  test_eval_evidence.py  test_evals.py  test_judges.py  test_materialize_corpus_release.py  test_metrics.py  test_migration_inventory.py  test_money_proof_atoms.py  test_new_jurisdiction.py  test_notary_verification.py  test_observability.py  test_oracle_coverage_pending.py  test_orchestrator_context.py  test_parallel_encoding.py  test_policyengine_classifier.py  test_policyengine_coverage.py  test_policyengine_coverage_monorepo.py  test_policyengine_ecps_snap.py  test_policyengine_ecps_tax.py  (+33 more)
(+114 files in other folders)
