[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorac"
version = "0.2.32"
description = "AI-assisted RAC encoding infrastructure - fully self-contained"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Rules Foundation", email = "info@rules.foundation" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "sqlite-utils>=3.30",
    "supabase>=2.0.0",
]

# By default uses Claude Code CLI (subprocess) - no anthropic SDK needed.
# Claude Code must be installed: npm install -g @anthropic-ai/claude-code
#
# For API backend (Modal, servers), install with: pip install autorac[api]

[project.optional-dependencies]
api = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
]
observability = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "towncrier",
]
all = [
    "autorac[api,dev,observability]",
]

[project.scripts]
autorac = "autorac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autorac"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/autorac --cov-report=term-missing"

[tool.towncrier]
package = "autorac"
package_dir = "src"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/autorac/supabase_sync.py" = ["F821"]
