[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-encode"
version = "0.2.1304"
description = "AI-assisted RuleSpec encoding infrastructure - fully self-contained"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    { name = "The Axiom Foundation", email = "hello@axiom-foundation.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Shared PolicyEngine/Populace oracle-bridge layer; the modules under
    # src/axiom_encode/oracles/policyengine/ are thin re-export shims over
    # axiom_oracles.bridges (axiom-oracles#124). Pinned to a commit because
    # axiom-oracles is not on PyPI; bump the SHA to pull bridge changes.
    "axiom-oracles @ git+https://github.com/TheAxiomFoundation/axiom-oracles@9901e2479ac39bba865b8232e1c7d879ba447d8d",
    "cryptography>=46.0",
    "pydantic>=2.0",
    "pypdf>=6.4.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "sqlite-utils>=3.30",
    "supabase>=2.0.0",
]

# By default uses Claude Code CLI (subprocess) - no anthropic SDK needed.
# Claude Code must be installed: npm install -g @anthropic-ai/claude-code
#
# For API backend (Modal, servers), install with: pip install axiom-encode[api]

[project.optional-dependencies]
api = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
]
observability = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "towncrier>=24.8.0",
]
all = [
    "axiom-encode[api,dev,observability]",
]

[project.scripts]
# entrypoint.main dispatches check-source-staleness and delegates every
# other invocation to axiom_encode.cli:main unchanged.
axiom-encode = "axiom_encode.entrypoint:main"

# Required for the git-pinned axiom-oracles dependency above (axiom-oracles
# is not published to PyPI, and neither is axiom-encode, so a direct
# reference is the honest declaration).
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_encode"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/axiom_encode --cov-report=term-missing"

[tool.towncrier]
package = "axiom_encode"
package_dir = "src"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/axiom_encode/supabase_sync.py" = ["F821"]
